deploy/overlays/dev/patches/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: paperclip
spec:
  host: "paperclip-dev.<CLUSTER_APPS_DOMAIN>"
